--- a/main/templates/account_page.html
+++ b/main/templates/account_page.html
@@ -17,17 +17,16 @@
 
 <body>
     <div id="wrapper">
-        <div id="navbar">
+        <header>
             <h1>Pizza Time!</h1>
-            <table>
-                <tr>
-                    <th><a href="/home">Home</a></th>
-                    <th><a href="/order">Order</a></th>
-                    <th><a href="/user/account_page">Account</a></th>
-                    <th><a href="/user/logout">Logout</a></th>
-                </tr>
-            </table>
-        </div>
+            <nav>
+                
+                <a href="/home_page">Home</a>
+                <a href="/craft_a_pizza_page">Order</a>
+                <a href="/user/account_page">Account</a>
+                <a href="/user/logout">Logout</a>
+            </nav>
+        </header>
         <div id="body-content">
             <div class="content account">
                 <h1>Account Info</h1>
